--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,4 +4,7 @@ main: org.shakespeare.funtestplugin.FunTestPlugin
 api-version: '1.21'
 authors: [Shakespeare]
 commands:
+  mystats:
+  toggle:
+  fun:
   thor:
